name:                yaulci-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yaulci-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     YAULCI.UntypedLC
  --default-extensions:  CPP
  default-language:    Haskell2010
                     
-- executable yaulci-haskell
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
